deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-loot-svc
spec:
  selector:
    app: api-loot
  ports:
    - protocol: TCP
      port: 80
      targetPort:  8082
  type: ClusterIP
